--- a/web_assets/css/page1.css
+++ b/web_assets/css/page1.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: row;
 
-    background-image: url("/web_assets/img/page1/page1_back.png"); /* 画像のファイルパスを指定します */
+    background-image: url("https://github.com/2001at/PR_website/blob/main/web_assets/img/page1/page1_back.png?raw=true"); /* 画像のファイルパスを指定します */
     background-size: cover; /* 画像を表示する範囲に合わせて拡大縮小します */
     background-position: center; /* 画像を中央に配置します */
     background-repeat: no-repeat; /* 画像を繰り返し表示しません */
