--- a/web_assets/css/page2.css
+++ b/web_assets/css/page2.css
@@ -7,7 +7,7 @@
     justify-content: center;
     align-items: center;
     background-color:#efe9e4;
-    background-image: url("https: //github .com/ 2001at /PR_website/blob/main/web_assets/img/page 2px;/page2_back.png"); /* 画像のファイルパスを指定します */
+    background-image: url("https://github.com/2001at/PR_website/blob/main/web_assets/img/page2/page2_back.png?raw=true"); /* 画像のファイルパスを指定します */
     background-size: cover; /* 画像を表示する範囲に合わせて拡大縮小します */
     background-position: center; /* 画像を中央に配置します */
     background-repeat: no-repeat; /* 画像を繰り返し表示しません */
@@ -20,7 +20,7 @@
 }
 
 .first_catch{
-    font-family:"Yu Gothic", "游ゴシック", YuGothic, "游ゴシック体";
+    /* font-family:"Yu Gothic", "游ゴシック", YuGothic, "游ゴシック体"; */
     background-color: lightblue;
     font-size: 4vw;
     padding: 15px;
