--- a/web_assets/css/page3.css
+++ b/web_assets/css/page3.css
@@ -7,7 +7,7 @@
     background-color: #efe9e4;
     position: relative;
 
-    background-image: url("/web_assets/img/page3/page3_back.png");
+    background-image: url("https://github.com/2001at/PR_website/blob/main/web_assets/img/page3/page3_back.png?raw=true");
     background-size: cover; /* 画像を表示する範囲に合わせて拡大縮小します */
     background-position: center; /* 画像を中央に配置します */
     background-repeat: no-repeat; /* 画像を繰り返し表示しません */
