--- a/web_assets/css/page3.css
+++ b/web_assets/css/page3.css
@@ -298,6 +298,7 @@
 }
 
 .key2{
+    font-family: 'ヒラギノ明朝 Pro W3', 'Hiragino Mincho Pro', '游明朝','Yu Mincho', '游明朝体', 'YuMincho','ＭＳ Ｐ明朝', 'MS PMincho', serif;
     font-size: 2.3vw;
     padding: 10px;
     border-radius: 15px;
