--- a/web_assets/css/page3.css
+++ b/web_assets/css/page3.css
@@ -581,7 +581,7 @@
         font-family: 'ヒラギノ明朝 Pro W3', 'Hiragino Mincho Pro', '游明朝','Yu Mincho', '游明朝体', 'YuMincho','ＭＳ Ｐ明朝', 'MS PMincho', serif;
         font-size: 4vw;
         width: 100%;
-    }
+    }k
     .detail2{
         width: 100%;
     }
